--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,21 @@
+{
+  "name": "Smart City Mobility",
+  "short_name": "SmartCity",
+  "start_url": "index.html",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#007bff",
+  "icons": [
+    {
+      "src": "logo.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "logo.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
+}
 
